--- a/app/views/orders/_user-initialize.html.erb
+++ b/app/views/orders/_user-initialize.html.erb
@@ -8,8 +8,8 @@
         <%= f.input :prescriptions, as: :file, input_html: { multiple: true, class:'d-none'}, label: "Add my prescription" %>
         <%= f.submit "Go", class:'btn-prescription' %>
       <% end %>
-        <% if order.prescriptions.attached?%>
-          <%@order.prescriptions.each do |prescription| %>
+      <% if order.prescriptions.attached? %>
+        <% @order.prescriptions.each do |prescription| %>
           <div class=main2>
             <%= cl_image_tag prescription.key, class: 'card-prescription' %>
             <div class="cart-card-icons">
@@ -18,9 +18,37 @@
               <% end %>
             </div>
           </div>
-          <%end%>
-        <%end%>
-  </div>
+          <script>
+            document.querySelector(".card-prescription").addEventListener("click", function() {
+              document.querySelector('#modal-btn').click()
+            });
+          </script>
+          <!-- Modal prescription process -->
+          <button type="button" id="modal-btn" class="btn btn-primary d-none" data-toggle="modal" data-target="#exampleModal">
+          </button>
+
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">My prescription</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <%= cl_image_tag prescription.key, style: 'width: 100%;' %>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- end Modal -->
+        <% end %>
+      <% end %>
+    </div>
+
+
+
     <% @ordered_drugs.each do |ordered_drug| %>
       <div class="cart-card">
         <% if ordered_drug.drug.pic.attached?%>
@@ -47,7 +75,7 @@
         </div>
       </div>
     <% end %>
-  <%= link_to pending_status_path(@order) do %>
-    <button class="btn-checkout">Validate shopping cart</button>
-  <% end %>
+    <%= link_to pending_status_path(@order) do %>
+      <button class="btn-checkout">Validate shopping cart</button>
+    <% end %>
 </div>
