--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,21 @@
           id: "address-input",
           placeholder: "Enter your location"
         %>
-        <%= submit_tag "Go", class: "search-button" %>
+        <%= submit_tag "Search", class: "search-button" %>
       <% end %>
+      <div class="cards">
+    <div class="card card-1">
+      <div class="card__icon"><i class="fas fa-bolt"></i></div>
+      <h2 class="card__title">Choose your pharmacies in Paris</h2>
+    </div>
+    <div class="card card-2">
+      <div class="card__icon"><i class="fas fa-bolt"></i></div>
+      <h2 class="card__title">Take advantage of your pharmacist's advice</h2>
+    </div>
+    <div class="card card-3">
+      <div class="card__icon"><i class="fas fa-bolt"></i></div>
+      <h2 class="card__title">Schedule delivery for yourself or a loved one and save time</h2>
+    </div>
+  </div>
     </div>
 </div>
