--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,7 +1,7 @@
  .main{
   padding: 10px;
   border-radius: 20px;
-  background-color: lightgray;
+  background-color: #d3d3d3;
   margin: 10px 0;
 }
 
@@ -14,7 +14,6 @@
 .card-prescription {
   width: 70px;
   height: 70px;
-  margin-top: 10px;
   cursor: pointer;
   position: relative;
   top: 0px;
