--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,6 +6,7 @@
   position: fixed;
   padding: 5px 20px;
   bottom: 0;
+  left: 0;
   opacity: 1;
   backdrop-filter: blur(8px);
   height: fit-content;
