--- a/app/assets/stylesheets/pages/_order.scss
+++ b/app/assets/stylesheets/pages/_order.scss
@@ -114,7 +114,7 @@
   border-radius: 32px;
   border: none;
   padding: 10px;
-  background-color: #000507;
+  background-color: rgb(4,184,244);
   color: white;
   font-weight: 400;
   font-size: 18px;
