--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,11 @@
-// Graphical variables
+//   variables
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
 
 // External libraries
 @import "bootstrap/scss/bootstrap";
+@import "swiper/swiper-bundle";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
