--- a/app/views/pharmacies/index.html.erb
+++ b/app/views/pharmacies/index.html.erb
@@ -1,22 +1,19 @@
 <div class="pharmacy-view">
-  <h1>Pharmacies</h1>
-  <div id="map"
-              class="my-2"
-              data-markers="<%= @markers.to_json %>"
-              data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
-  <div class="pharmacy-cards">
-    <% @pharmacies.each do |pharmacy| %>
-      <%= link_to pharmacy_path(pharmacy) do %>
-        <div class="pharmacy-card">
-          <div class="pharmacy-card-infos">
-            <div>
+  <div id="map", data-markers="<%= @markers.to_json %>", data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    <div class="swiper">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <% @pharmacies.each do |pharmacy| %>
+        <%= link_to orders_path(pharmacy_id: pharmacy.id), method: 'POST' do %>
+          <div class="swiper-slide" id="pharmacy_<%= pharmacy.id %>">
+            <div class="pharmacy-card-slider">
               <h2><%= pharmacy.name %></h2>
               <p><%= pharmacy.address %></p>
             </div>
           </div>
-        </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
 </div>
