--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -13,7 +13,7 @@ $light-gray: #F4F4F4;
 #colors {
  color: #000507 ;
  color: #00243D ;
- color: #00B8F5 ;
+ color: #0a617e ;
  color: #D6F3FF ;
  color: #FFFFFF ;
  color: #09BC8A ;
