--- a/app/assets/stylesheets/pages/home-page.scss
+++ b/app/assets/stylesheets/pages/home-page.scss
@@ -9,6 +9,32 @@
       Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   }
 
+  h1, h3 {
+    font-family: 'Poppins', sans-serif;
+  }
+
+  h1 {
+    font-size: 20px;
+    color: white;
+  }
+
+  h3 {
+    color: white;
+    font-weight: 900;
+  }
+  h3 > strong {
+    color: salmon;
+  }
+  
+  .sigle {
+    background-color: #0a617e;
+    padding: 0px 0px 90px 0px;
+  }
+
+  .sub-title {
+    background-color: #0a617e;
+    padding: 32px 42px 0px;
+  }
   .cards {
     display: flex;
     flex-wrap: wrap;
