--- a/app/assets/stylesheets/pages/_drugs.scss
+++ b/app/assets/stylesheets/pages/_drugs.scss
@@ -1,10 +1,22 @@
-.background-drugs{
-  background:#00243D;
+// font-family: 'Poppins', sans-serif;
+// font-family: 'Work Sans', sans-serif;
+
+.pharma-header {
+  padding-top: 15px;
+  padding-bottom: 6px;
 }
 
-.pharma-title {
-  padding-top: 15px;
-  padding-bottom: 23px;
+.pharma-header h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 28px;
+  font-weight: bold;
+  color: #272E35;
+}
+
+.pharma-header p {
+  font-family: 'Work Sans', sans-serif;
+  font-size: 16px;
+  color: #828282;
 }
 
 
@@ -16,12 +28,6 @@
   padding-bottom: 20px;
   padding-top: 45px;
 }
-
-// .card-drug-contour {
-//   background: #00243D;
-//   height: 193px;
-//   border-radius: 15px;
-// }
 
 
 .card-drug {
@@ -101,65 +107,3 @@
   width: 17px;
 
 }
-
-
-
-
-
-// .card-product {
-//   overflow: hidden;
-//   height: 120px;
-//   background: white;
-//   box-shadow: 0 0 25px rgba(0,0,0,0.2);
-//   display: flex;
-//   align-items: center;
-//   margin: 15px ;
-//   border-radius: 7px;
-// }
-
-// .card-product img {
-//   height: 100%;
-//   width: 120px;
-//   object-fit: cover;
-// }
-
-// .card-product h2 {
-//   font-size: 16px;
-//   font-weight: bold;
-//   margin: 0;
-// }
-
-// .card-product p {
-//   font-size: 12px;
-//   line-height: 1.4;
-//   opacity: .7;
-//   margin-bottom: 0;
-//   margin-top: 8px;
-// }
-
-// .card-product .card-product-infos {
-//   padding: 16px;
-// }
-
-// .card-product-infos {
-//   padding: 16px;
-//   height: 125px;
-// }
-// .card-product a {
-//   color: black;
-//   flex-grow: 1;
-// }
-
-// .card-product-icons {
-//   margin: 16px 16px 16px 0;
-//   width: 20px;
-//   height: 120px;
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: space-between;
-//   .drugs-delete {
-//     color: grey;
-//     width: 20px;
-//     transition-duration: .2s;
-//   }
-// }
