--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="view" data-controller="list">
-    <div class="pharma-title">
-      <h2><%= @pharmacy.name  %></h2>
+    <div class="pharma-header">
+      <h2><%= @pharmacy.name%></h2>
+      <p><%= @pharmacy.address%></p>
     </div>
     <%= form_tag drugs_path, method: :get, class: "drug-index-search" do %>
       <%= text_field_tag :query,
@@ -14,6 +15,10 @@
       <%= submit_tag "☌", class: "drug-search-bard-button" %>
 
     <% end %>
+
+
+
+
     <div class="two-columns-cards">
       <% @drugs.each do |drug| %>
         <div class="card-drug" >
