--- a/app/views/ordered_drugs/index.html.erb
+++ b/app/views/ordered_drugs/index.html.erb
@@ -4,7 +4,7 @@
       <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
       <div class="card-product-infos">
         <h2><%=order_drug.drug.name%></h2>
-        <p><%=order_drug.drug.description%></p>
+        <p><%=order_drug.drug.age%></p>
       </div>
       <% if !order_drug.price %>
         <div class="edit-button">
