--- a/app/assets/stylesheets/components/_drug-card.scss
+++ b/app/assets/stylesheets/components/_drug-card.scss
@@ -1,2 +1,2 @@
-font-family: 'Poppins', sans-serif;
-font-family: 'Work Sans', sans-serif;
+// font-family: 'Poppins', sans-serif;
+// font-family: 'Work Sans', sans-serif;
