--- a/app/assets/stylesheets/components/_drugsearch.scss
+++ b/app/assets/stylesheets/components/_drugsearch.scss
@@ -5,7 +5,7 @@
 
 .searchadrug {
   border-radius: 30px;
-  width: 80vw;
+  width: 300px;
   padding-top: 7px;
   font-family: 'Work Sans', sans-serif;
   font-size: 16px;
@@ -29,4 +29,6 @@
   transform: rotate(208deg);
   margin-left: 10px;
   color: #00B8F5;
+  position: absolute;
+  left: 270px;
 }
