--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -16,35 +16,29 @@
 
     <% end %>
 
-
-
-
-    <div class="two-columns-cards">
-      <% @drugs.each do |drug| %>
-        <div class="card-drug" >
-          <div class="topcard">
-            <% if drug.pic.attached?%>
-              <%=cl_image_tag drug.pic.key%>
-            <%else%>
-              <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-            <%end%>
-          </div>
-          <div class="card-drug-infos">
-            <div >
-              <h2><%= drug.formated_name %></h2>
-            </div>
-            <h2 class="card-drug-plus">
-            <% if OrderedDrug.find_by(drug: drug, order: current_user.orders.last) %>
-              <%= image_tag("cocher.png", border: 0, class:'icon') %>
-            <% else %>
-              <%= link_to order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post do %>
-                <%= image_tag("plus.png", border: 0, class:'icon') %>
-              <% end %>
-            <% end %>
-            </h2>
-          </div>
+    <% @drugs.each do |drug| %>
+      <div class="card-product">
+        <% if drug.pic.attached?%>
+          <%=cl_image_tag drug.pic.key%>
+        <%else%>
+          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+        <%end%>
+        <div class="card-product-infos">
+          <h2><%= drug.formated_name %></h2>
+          <p><%= "+#{drug.age} years" %></p>
         </div>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
   </div>
 </div>
+
+
+          <%# <h2 class="card-drug-plus"> %>
+          <%# <% if OrderedDrug.find_by(drug: drug, order: current_user.orders.last) %>
+              <%# <%= image_tag("cocher.png", border: 0, class:'icon') %>
+            <%# <% else %>
+              <%# <%= link_to order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post do %>
+                <%# <%= image_tag("plus.png", border: 0, class:'icon') %>
+              <%# <% end %>
+            <%# <% end %>
+            <%# </h2> %>
