--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,24 +20,18 @@
       </div>
     </div>
   </div>
-  <div>
-  <h4>Advantages<br><strong>Best website for medication<strong></h4>
+  <div class="value">
+    <img src="https://img.icons8.com/emoji/96/000000/plus-emoji.png"/>
   </div>
+    <div>
+      <h4>Best website for order medication</h4>
+    </div>
   <div class="cards">
-    <div class="card card-1">
-      <div class="card__icon"><i class="fas fa-bolt"></i></div>
       <img src="https://img.icons8.com/ios/100/000000/map--v2.png"/>
       <h2 class="card__title">Choose your pharmacies in Paris</h2>
-    </div>
-    <div class="card card-2">
-      <div class="card__icon"><i class="fas fa-bolt"></i></div>
       <img src="https://img.icons8.com/pastel-glyph/128/000000/facebook-like--v2.png"/>
       <h2 class="card__title">Take advantage of your pharmacist's advice</h2>
-    </div>
-    <div class="card card-3">
-      <div class="card__icon"><i class="fas fa-bolt"></i></div>
       <img src="https://img.icons8.com/ios/100/000000/globe--v2.png"/>
       <h2 class="card__title">Schedule delivery for yourself or a loved one and save time</h2>
-    </div>
   </div>
 </div>
