--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -17,13 +17,13 @@
     <% end %>
 
     <% @drugs.each do |drug| %>
-      <div class="card-product">
+      <div class="card-product-drug">
         <% if drug.pic.attached?%>
           <%=cl_image_tag drug.pic.key%>
         <%else%>
           <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
         <%end%>
-        <div class="card-product-infos">
+        <div class="card-product-drug-infos">
           <h2><%= drug.formated_name %></h2>
           <p><%= "+#{drug.age} years" %></p>
         </div>
