--- a/app/views/pharmacies/index.html.erb
+++ b/app/views/pharmacies/index.html.erb
@@ -1,5 +1,14 @@
 <div class="pharmacy-view">
   <div id="map", data-markers="<%= @markers.to_json %>", data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    <div id="map-search-bar">
+      <%= form_tag pharmacies_path, method: :get do %>
+        <%= text_field_tag :query,
+          params[:query],
+          id: "address-input",
+          placeholder: "Enter your location"
+        %>
+      <% end %>
+    </div>
     <div class="swiper">
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
