adding what i did till now

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,6 +19,14 @@
         <% end %>
       </div>
     </div>
+    <div class="slidown">
+      <div class='scrolldown'>
+        <div class="chevrons">
+          <div class='chevrondown'></div>
+          <div class='chevrondown'></div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="value">
     <img src="https://img.icons8.com/emoji/96/000000/plus-emoji.png"/>
@@ -27,11 +35,26 @@
       <h4>Best website for order medication</h4>
     </div>
   <div class="cards">
-      <img src="https://img.icons8.com/ios/100/000000/map--v2.png"/>
-      <h2 class="card__title">Choose your pharmacies in Paris</h2>
-      <img src="https://img.icons8.com/pastel-glyph/128/000000/facebook-like--v2.png"/>
-      <h2 class="card__title">Take advantage of your pharmacist's advice</h2>
-      <img src="https://img.icons8.com/ios/100/000000/globe--v2.png"/>
-      <h2 class="card__title">Schedule delivery for yourself or a loved one and save time</h2>
+    <div class="value">
+      <img src="https://img.icons8.com/ios/100/000000/map--v2.png" style="height: 90px;"/>
+    </div>
+    <div class="advantage">
+      <h6>Choose</h6><br>
+      <h4 class="card__title">your pharmacy in Paris</h4>
+    </div>
+    <div class="value">
+      <img src="https://img.icons8.com/pastel-glyph/128/000000/facebook-like--v2.png" style="height: 99px;"/>
+    </div>
+    <div class="advantage">
+      <h6>Take advantage</h6><br>
+      <h4 class="card__title">of your pharmacist's advice</h4>
+    </div>
+    <div class="value">
+      <img src="https://img.icons8.com/ios/100/000000/globe--v2.png" style="height: 90px;"/>
+    </div>
+    <div class="advantage">
+      <h6>Delivery</h6>
+      <h4 class="card__title">Schedule delivery for yourself or a loved one and save time</h4>
+    </div>
   </div>
 </div>
