--- a/app/assets/stylesheets/pages/home-page.scss
+++ b/app/assets/stylesheets/pages/home-page.scss
@@ -36,9 +36,17 @@
     color: #636e92;
   }
 
+  h6{
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    color: salmon;
+    margin: 0;
+    font-size: x-large;
+  }
+
   .sigle {
     background-color: #0a617e;
-    padding: 0px 0px 90px 0px;
+    padding-bottom: 20px;
   }
 
   .sub-title {
@@ -53,9 +61,6 @@
   }
 
   .cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
     padding: 0px 0px 100px 0px;
   }
   
@@ -88,6 +93,102 @@
     color: #636e92;
   }
 
+  .advantage {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .img-home {
+    margin-top: 50px;
+  }
+
+  .slidown {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+  }
+
+  .scrolldown {
+    --color: white;
+    --sizeX: 30px;
+    --sizeY: 50px;
+    position: relative;
+    width: var(--sizeX);
+    height: var(--sizeY);
+    margin-left: var(sizeX / 2);
+    border: calc(var(--sizeX) / 10) solid var(--color);
+    border-radius: 50px;
+    box-sizing: border-box;
+    margin-bottom: 16px;
+  }
+  
+  .scrolldown::before {
+    content: "";
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    width: 6px;
+    height: 6px;
+    margin-left: -3px;
+    background-color: var(--color);
+    border-radius: 100%;
+    animation: scrolldown-anim 2s infinite;
+    box-sizing: border-box;
+    box-shadow: 0px -5px 3px 1px #ffffff66;
+  }
+  
+  @keyframes scrolldown-anim {
+    0% {
+      opacity: 0;
+      height: 6px;
+    }
+    40% {
+      opacity: 1;
+      height: 10px;
+    }
+    80% {
+      transform: translate(0, 20px);
+      height: 10px;
+      opacity: 0;
+    }
+    100% {
+      height: 3px;
+      opacity: 0;
+    }
+  }
+  .chevrons {
+    padding: 6px 0 0 0;
+    margin-left: -3px;
+    margin-top: 48px;
+    width: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .chevrondown {
+    margin-top: -6px;
+    position: relative;
+    border: solid var(--color);
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    transform: rotate(45deg);
+  }
+  .chevrondown:nth-child(odd) {
+    animation: pulse 500ms ease infinite alternate;
+  }
+  .chevrondown:nth-child(even) {
+    animation: pulse 500ms ease infinite alternate 250ms;
+  }
+  @keyframes pulse {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 0.5;
+    }
+  }
   /* CARD BACKGROUNDS */
   
   // .card-1 {
