--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -8,41 +8,45 @@
 }
 
 a .dashboard-card-infos h2 {
-  font-size: 15px;
-  font-weight: bold;
-  color: white;
+  font-size: 16px;
+  font-weight: normal;
+  font-family: 'Work Sans', sans-serif;
+  color: #828282;
+  letter-spacing: 1px;
 }
 
 a .dashboard-card-infos p {
-  font-size: 12px;
-  color: white;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  color: #272E35;
   margin-bottom: 10px;
 }
 
 a .dashboard-card-infos h6 {
-  font-weight: bold;
+  font-family: 'Work Sans', sans-serif;
   font-size: 14px;
-  color: white;
+  color: #272E35;
 }
 
 a .dashboard-card-infos {
-  border-radius: 20px;
   padding: 10px 15px;
   width: 80vw;
-  background:rgb(55, 55, 55);
-  height: 90px;
   text-align: left;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 90px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.05);
 }
+
 
 .dashboard-card-icons {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0 0 0 20px;
   height: 80px;
+
   img {
     height: 17px;
     width: 17px;
