--- a/app/views/orders/_user-pending.html.erb
+++ b/app/views/orders/_user-pending.html.erb
@@ -1,11 +1,13 @@
-<div class="flash flash-warning alert alert-dismissible fade show" role="alert">
-  <div class="flash-content">
-    <p><strong>Hi again!</strong> Your order is being handeled by the pharmacist. You will be notified as soon as it's ready for payment ☺️</p>
-    <%= link_to "< Back to your orders", orders_path, class:"button-pharma-index"%>
+<div class="flash-wrapper">
+  <div class="flash flash-warning alert alert-dismissible fade show" role="alert">
+    <div class="flash-content">
+      <p><strong>Hi again!</strong> Your order is being handeled by the pharmacist. You will be notified as soon as it's ready for payment ☺️</p>
+      <%= link_to "< Back to your orders", orders_path, class:"button-pharma-index"%>
+    </div>
+    <a data-dismiss="alert" aria-label="Close">
+      <i class="fas fa-times"></i>
+    </a>
   </div>
-  <a data-dismiss="alert" aria-label="Close">
-    <i class="fas fa-times"></i>
-  </a>
 </div>
 
 <div class="pending-view">
