fixed homepage html

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,10 +29,11 @@
     </div>
   </div>
   <div class="value">
-    <img src="https://img.icons8.com/emoji/96/000000/plus-emoji.png"/>
+    <img src="https://img.icons8.com/pastel-glyph/128/000000/facebook-like--v2.png"/>
   </div>
-    <div>
-      <h4>Best website for order medication</h4>
+    <div class="advantage">
+      <h6>Top</h6><br>
+      <h4>application for medication delivery</h4>
     </div>
   <div class="cards">
     <div class="value">
@@ -40,10 +41,10 @@
     </div>
     <div class="advantage">
       <h6>Choose</h6><br>
-      <h4 class="card__title">your pharmacy in Paris</h4>
+      <h4 class="card__title">from top pharmacies in Paris</h4>
     </div>
     <div class="value">
-      <img src="https://img.icons8.com/pastel-glyph/128/000000/facebook-like--v2.png" style="height: 99px;"/>
+      <img src="https://img.icons8.com/emoji/96/000000/plus-emoji.png" style="height: 99px;"/>
     </div>
     <div class="advantage">
       <h6>Take advantage</h6><br>
@@ -53,7 +54,7 @@
       <img src="https://img.icons8.com/ios/100/000000/globe--v2.png" style="height: 90px;"/>
     </div>
     <div class="advantage">
-      <h6>Delivery</h6>
+      <h6>Delivery</h6><br>
       <h4 class="card__title">Schedule delivery for yourself or a loved one and save time</h4>
     </div>
   </div>
