--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,7 @@
-.title {
-  padding-top: 35px;
-  padding-left: 30px;
-  h1 {
-    font-size: 45px;
-  }
+h1 {
+  padding: 0 10px;
 }
+
 .home-top {
   display: flex;
   align-items: center;
