--- a/app/views/orders/_user-ready.html.erb
+++ b/app/views/orders/_user-ready.html.erb
@@ -1,5 +1,7 @@
 <div class="view">
-  <h1>Cart</h1>
+  <div class="cart-header">
+    <h2>My cart</h2>
+  </div>
   <div class="main">
     <% if @order.prescriptions.attached? %>
       <% @order.prescriptions.each do |prescription| %>
