--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -12,8 +12,10 @@
 
 .button-pharma-index {
   text-decoration: underline;
-  color: grey;
+  color: white;
+  opacity: 0.8;
   text-align: center;
+  font-size: 15px;
 }
 
 .pharmacy-show-top {
