--- a/app/assets/stylesheets/pages/_order.scss
+++ b/app/assets/stylesheets/pages/_order.scss
@@ -136,3 +136,21 @@
   font-weight: 400;
   font-size: 18px;
 }
+
+.cart-header {
+  background: #0a617e;
+  width: 100vw;
+  margin: -10px -20px 5px -20px;
+  padding: 20px;
+  h2 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 28px;
+    color: white;
+  }
+  p {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 16px;
+    color: white;
+    padding-top: 10px;
+  }
+}
