--- a/app/views/orders/_pharm-pending.html.erb
+++ b/app/views/orders/_pharm-pending.html.erb
@@ -1,48 +1,50 @@
 <div class="view">
-  <h1>Order review</h1>
-    <div class="main">
-      <% if @order.prescriptions.attached? %>
-        <% @order.prescriptions.each do |prescription| %>
-          <div class=main2>
-              <%= cl_image_tag prescription.key, class: 'card-prescription' %>
-              <p style="width: 230px;"><em>Click on the image to add the drugs to the customer's cart</em></p>
-          </div>
-          <script>
-            document.querySelector(".card-prescription").addEventListener("click", function() {
-              document.querySelector('#modal-btn').click()
-            });
-          </script>
-          <!-- Modal prescription process -->
-          <button type="button" id="modal-btn" class="btn btn-primary d-none" data-toggle="modal" data-target="#exampleModal">
-          </button>
+  <div class="cart-header">
+    <h2>Order review</h2>
+  </div>
+  <div class="main">
+    <% if @order.prescriptions.attached? %>
+      <% @order.prescriptions.each do |prescription| %>
+        <div class=main2>
+            <%= cl_image_tag prescription.key, class: 'card-prescription' %>
+            <p style="width: 230px;"><em>Click on the image to add the drugs to the customer's cart</em></p>
+        </div>
+        <script>
+          document.querySelector(".card-prescription").addEventListener("click", function() {
+            document.querySelector('#modal-btn').click()
+          });
+        </script>
+        <!-- Modal prescription process -->
+        <button type="button" id="modal-btn" class="btn btn-primary d-none" data-toggle="modal" data-target="#exampleModal">
+        </button>
 
-          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Customer's prescription</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <%= cl_image_tag prescription.key, style: 'width: 100%;' %>
-                     <%= simple_form_for @order do |f| %>
-                      <%= f.abyme_for(:ordered_drugs, button_text: "Add drug") do |abyme| %>
-                        <%= abyme.records(collection: @order.ordered_drugs.where(user: current_user)) %>
-                        <%= abyme.new_records %>
-                        <%= add_associated_record %>
-                      <% end %>
-                        <%= f.submit %>
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Customer's prescription</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <%= cl_image_tag prescription.key, style: 'width: 100%;' %>
+                    <%= simple_form_for @order do |f| %>
+                    <%= f.abyme_for(:ordered_drugs, button_text: "Add drug") do |abyme| %>
+                      <%= abyme.records(collection: @order.ordered_drugs.where(user: current_user)) %>
+                      <%= abyme.new_records %>
+                      <%= add_associated_record %>
                     <% end %>
-                </div>
+                      <%= f.submit %>
+                  <% end %>
               </div>
             </div>
           </div>
-          <!-- end Modal -->
-        <% end %>
+        </div>
+        <!-- end Modal -->
       <% end %>
-    </div>
+    <% end %>
+  </div>
   <% @ordered_drugs.each do |ordered_drug| %>
     <div class="cart-card">
       <% if ordered_drug.drug.pic.attached?%>
