--- a/app/views/orders/_user-index.html.erb
+++ b/app/views/orders/_user-index.html.erb
@@ -1,5 +1,7 @@
 <div class="view">
-  <h1>My Dashboard</h1>
+  <div class="cart-header">
+    <h2>My Dashboard</h2>
+  </div>
   <% @orders.each do |order| %>
     <div class="dashboard-card">
       <%= link_to order_path(order) do %>
