--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,18 +44,11 @@
       <h4 class="card__title">from top pharmacies in Paris</h4>
     </div>
     <div class="value">
-      <img src="https://img.icons8.com/emoji/96/000000/plus-emoji.png" style="height: 99px;"/>
-    </div>
-    <div class="advantage">
-      <h6>Take advantage</h6><br>
-      <h4 class="card__title">of your pharmacist's advice</h4>
-    </div>
-    <div class="value">
       <img src="https://img.icons8.com/ios/100/000000/globe--v2.png" style="height: 90px;"/>
     </div>
     <div class="advantage">
       <h6>Delivery</h6><br>
-      <h4 class="card__title">Schedule delivery for yourself or a loved one and save time</h4>
+      <h4 class="card__title">for yourself or a loved one and save time</h4>
     </div>
   </div>
 </div>
