--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="home-view">
   <div class="sigle">
-    <div class="home-top">
+    <div class="home-top" id="haut">
       <h1>Drug<br/><strong>Dealer</strong></h1>
       <%= image_tag "logo.png", style: 'height:50px;width:50px' %>
     </div>
@@ -35,6 +35,7 @@
       <h4>Best website for order medication</h4>
     </div>
   <div class="cards">
+    <hr>
     <div class="value">
       <img src="https://img.icons8.com/ios/100/000000/map--v2.png" style="height: 90px;"/>
     </div>
@@ -42,6 +43,7 @@
       <h6>Choose</h6><br>
       <h4 class="card__title">your pharmacy in Paris</h4>
     </div>
+    <hr>
     <div class="value">
       <img src="https://img.icons8.com/pastel-glyph/128/000000/facebook-like--v2.png" style="height: 99px;"/>
     </div>
@@ -49,6 +51,7 @@
       <h6>Take advantage</h6><br>
       <h4 class="card__title">of your pharmacist's advice</h4>
     </div>
+    <hr>
     <div class="value">
       <img src="https://img.icons8.com/ios/100/000000/globe--v2.png" style="height: 90px;"/>
     </div>
@@ -56,5 +59,6 @@
       <h6>Delivery</h6>
       <h4 class="card__title">Schedule delivery for yourself or a loved one and save time</h4>
     </div>
+    <a href="#haut" class="button-up">Go up</a>
   </div>
 </div>
