changed the size of a photo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="value">
-    <img src="https://img.icons8.com/pastel-glyph/128/000000/facebook-like--v2.png"/>
+    <img src="https://img.icons8.com/pastel-glyph/128/000000/facebook-like--v2.png" style="height: 99px;"/>
   </div>
     <div class="advantage">
       <h6>Top</h6><br>
